--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -147,22 +147,34 @@ footer {
   margin: 2% 5%;
 }
 
+#portfolio-container {
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  border: solid;
+  border-width: 26px 0;
+  border-image: url(../Images/textures/wood-logs.jpg) 53;
+  border-image-repeat: repeat;
+}
 #portfolio-container #portfolio-bg-trees {
   bottom: 0;
   background-image: url("../Images/backgrounds/portfolio-trees-efdal-yildiz.png");
   background-position: bottom;
   background-attachment: local;
-  background-size: 50%;
+  background-size: 75%;
   background-repeat: repeat-x;
 }
 #portfolio-container #portfolio-bg-stars {
+  left: 0;
+  width: 120%;
+  background-size: 120%;
   background-image: url("../Images/backgrounds/portfolio-starry-felix-mittermeier.jpg");
-  background-size: 50%;
   z-index: -6;
 }
 #portfolio-container .content-panel {
+  display: grid;
   background-color: green;
-  height: 70%;
+  height: 100%;
   width: 80vw;
 }
 
