--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -173,9 +173,29 @@ footer {
 }
 #portfolio-container .content-panel {
   display: grid;
+  grid-template-rows: auto;
+  grid-template-columns: auto;
+  grid-template-areas: "header header" "project1 project2" "project3 project4";
   background-color: green;
   height: 100%;
   width: 80vw;
+}
+#portfolio-container .content-panel h1 {
+  font-size: 300%;
+  text-align: center;
+  grid-area: header;
+}
+#portfolio-container .content-panel #portfolio-project-1 {
+  grid-area: project1;
+}
+#portfolio-container .content-panel #portfolio-project-2 {
+  grid-area: project2;
+}
+#portfolio-container .content-panel #portfolio-project-3 {
+  grid-area: project3;
+}
+#portfolio-container .content-panel #portfolio-project-4 {
+  grid-area: project4;
 }
 
 #contact-container .content-panel {
