--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Cabin:wght@400;700&display=swap");
 html, body {
   position: relative;
   width: 100%;
@@ -173,17 +174,42 @@ footer {
 }
 #portfolio-container .content-panel {
   display: grid;
-  grid-template-rows: auto;
-  grid-template-columns: auto;
+  grid-template-rows: 0.5fr 1fr 1fr;
+  grid-template-columns: repeat(2, 1fr);
   grid-template-areas: "header header" "project1 project2" "project3 project4";
-  background-color: green;
+  background-image: url(../Images/textures/wood-old.jpg);
+  background-size: 25%;
   height: 100%;
   width: 80vw;
 }
-#portfolio-container .content-panel h1 {
-  font-size: 300%;
+#portfolio-container .content-panel .panel-header {
   text-align: center;
   grid-area: header;
+  border-bottom: 26px solid;
+  border-image: url(../Images/textures/wood-logs.jpg) 53;
+  background-image: url(../Images/textures/wood-rough-seamless.jpg);
+  background-size: 25%;
+}
+#portfolio-container .content-panel .panel-header h1 {
+  font-family: "Cabin", sans-serif;
+  font-size: 400%;
+  text-shadow: #b38a64 0px 2px 2px;
+  color: #1f160a;
+  align-self: center;
+}
+#portfolio-container .content-panel .portfolio-project {
+  text-align: center;
+  justify-content: center;
+}
+#portfolio-container .content-panel .portfolio-project h2 {
+  font-size: 150%;
+}
+#portfolio-container .content-panel .portfolio-project img {
+  width: 50%;
+  height: 50%;
+  overflow: hidden;
+  border-radius: 5px;
+  border: 2px solid;
 }
 #portfolio-container .content-panel #portfolio-project-1 {
   grid-area: project1;
