--- a/Assets/css/style.scss
+++ b/Assets/css/style.scss
@@ -7,6 +7,7 @@ $clr-pink-light: #faddff;
 $clr-button: #263f66;
 $clr-headerfooter: #0b2518;
 $clr-wood-carving: #1f160a;
+$clr-wood: #8e735a;
 
 @mixin font_cabin {
     font-family: 'Cabin', sans-serif;
@@ -245,11 +246,18 @@ footer {
         "project3 project4";
         background-image: url(../Images/textures/wood-old.jpg);
         background-size: 25%;
+        border: 4px $clr-wood;
+        border-style: ridge;
+        border-top: none;
+        border-bottom: none;
         height: 100%;
         width: 80vw;
 
         .panel-header {
+            display: flex;
+            align-items: center;
             text-align: center;
+            justify-content: center;
             grid-area: header;
             border-bottom: 26px solid;
             border-image: url(../Images/textures/wood-logs.jpg) 53;
@@ -261,9 +269,7 @@ footer {
                 @include font_cabin;
                 font-size: 400%;
                 text-shadow: #b38a64 0px 2px 2px;
-                color: $clr-wood-carving;
-                align-self: center;
-                
+                color: $clr-wood-carving;                
             }
         }
 
