--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -160,7 +160,7 @@ footer {
 #portfolio-container #portfolio-bg-trees {
   bottom: 0;
   background-image: url("../Images/backgrounds/portfolio-trees-efdal-yildiz.png");
-  background-position: bottom;
+  background-position: left bottom;
   background-attachment: local;
   background-size: 75%;
   background-repeat: repeat-x;
@@ -184,7 +184,7 @@ footer {
   border-top: none;
   border-bottom: none;
   height: 100%;
-  width: 80vw;
+  width: 60vw;
 }
 #portfolio-container .content-panel .panel-header {
   display: flex;
