removed header and footer scroller... looks a bit cleaner this way. may introduce it in the future

--- a/Assets/css/style.scss
+++ b/Assets/css/style.scss
@@ -342,6 +342,7 @@ footer {
         border-radius: 100%;
         border: 2px solid darken($clr-bubbleglass, 20);
         z-index: 5;
+        box-shadow: gray 3px 3px 5px;
 
         span {
             position: absolute;
