--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -261,6 +261,7 @@ footer {
   border-radius: 100%;
   border: 2px solid #8bae81;
   z-index: 5;
+  box-shadow: gray 3px 3px 5px;
 }
 #contact-container .contact-bubble span {
   position: absolute;
