--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -202,16 +202,20 @@ footer {
 }
 #portfolio-container .content-panel .panel-header h1 {
   font-family: "Cabin", sans-serif;
-  font-size: 400%;
+  font-size: max(8vw, 25px);
   text-shadow: #b38a64 0px 2px 2px;
   color: #31220f;
 }
 #portfolio-container .content-panel .portfolio-project {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   text-align: center;
   justify-content: center;
+  padding: 2% 5%;
 }
 #portfolio-container .content-panel .portfolio-project h2 {
-  font-size: 150%;
+  font-size: max(4vw, 20px);
 }
 #portfolio-container .content-panel .portfolio-project img {
   width: 50%;
