--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -158,7 +158,7 @@ footer {
   border-width: 26px 0;
   border-image: url(../Images/textures/wood-logs.jpg) 53;
   border-image-repeat: repeat;
-  height: 120vh;
+  height: 100%;
 }
 #portfolio-container #portfolio-bg-trees {
   bottom: 0;
@@ -179,6 +179,7 @@ footer {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  align-content: flex-start;
   background-image: url(../Images/textures/wood-old.jpg);
   background-size: 25%;
   border: 4px #8e735a;
@@ -189,6 +190,7 @@ footer {
   width: 60vw;
 }
 #portfolio-container .content-panel .panel-header {
+  order: 0;
   display: flex;
   align-items: center;
   text-align: center;
@@ -212,35 +214,38 @@ footer {
   flex-direction: column;
   align-items: center;
   text-align: center;
-  justify-content: center;
-  padding: 2% 5%;
+  justify-content: start;
+  padding: 2% 2%;
 }
 @media only screen and (max-width: 425px) {
   #portfolio-container .content-panel .portfolio-project {
     width: 100%;
   }
 }
-#portfolio-container .content-panel .portfolio-project h2 {
-  font-size: max(4vw, 20px);
+#portfolio-container .content-panel .portfolio-project a {
+  font-family: "Cabin", sans-serif;
+  font-size: max(2vw, 20px);
+}
+#portfolio-container .content-panel .portfolio-project p {
+  font-size: max(1vw, 12px);
 }
 #portfolio-container .content-panel .portfolio-project img {
-  width: 50%;
-  height: 50%;
+  width: 100%;
   overflow: hidden;
   border-radius: 5px;
   border: 2px solid;
 }
 #portfolio-container .content-panel #portfolio-project-1 {
-  grid-area: project1;
+  order: 1;
 }
 #portfolio-container .content-panel #portfolio-project-2 {
-  grid-area: project2;
+  order: 2;
 }
 #portfolio-container .content-panel #portfolio-project-3 {
-  grid-area: project3;
+  order: 3;
 }
 #portfolio-container .content-panel #portfolio-project-4 {
-  grid-area: project4;
+  order: 4;
 }
 
 #contact-container {
