fixed portfolio bg

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -56,7 +56,7 @@ footer {
 
 .background-image {
   position: absolute;
-  height: 100vh;
+  height: 100%;
   width: 100%;
   z-index: -5;
   background-attachment: fixed;
@@ -171,7 +171,7 @@ footer {
 #portfolio-container #portfolio-bg-stars {
   left: 0;
   width: 120%;
-  background-size: 120%;
+  background-size: 140%;
   background-image: url("../Images/backgrounds/portfolio-starry-felix-mittermeier.jpg");
   z-index: -6;
 }
