--- a/Assets/css/style.scss
+++ b/Assets/css/style.scss
@@ -1,9 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Cabin:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap');
 
 $green-dark: #0b2518;
 $clr-index-header: #081810;
 $clr-index-body: #707065;
 $clr-index-light: #ffffff;
+$clr-text-secondary: #b4b4b4;
 $clr-pink-light: #faddff;
 $clr-button: #263f66;
 $clr-headerfooter: #0b2518;
@@ -11,8 +13,12 @@ $clr-bubbleglass: #c4d6bf;
 $clr-wood-carving: #31220f;
 $clr-wood: #8e735a;
 
-@mixin font_cabin {
+%font_cabin {
     font-family: 'Cabin', sans-serif;
+}
+
+%font_robotoCondensed {
+    font-family: 'Roboto Condensed', sans-serif;
 }
 
 @mixin pseudoElement {
@@ -164,10 +170,10 @@ footer {
             color: $clr-index-light;
             font-size: 8vw;
             display: flex;
+            flex-direction: column;
             text-align: center;
-            justify-content: center;
+            justify-content: space-evenly;
             align-self: center;
-            align-items: center;
             height: 100%;
             width: 100%;
             border-top-left-radius: inherit;
@@ -175,12 +181,16 @@ footer {
             border: 2px black solid;
             border-bottom: none;
             // border: black solid;
+
+            p {
+                font-size: 2vw;
+                color: $clr-text-secondary;
+            }
         }
     
         .panel-body {
-            display: grid;
-            grid-template-rows: [start links-start] 1fr 1fr 1fr 1fr [links-end end];
-            grid-template-columns: [start links-start] 1fr [links-end] 2fr [end];
+            display: flex;
+            flex-direction: column;
 
             height: 100%;
             width: 100%;            
@@ -192,15 +202,41 @@ footer {
             text-align: center;
             // border: 2px 0px 2px 2px;
             // border: black solid;
+
+            #index-about {
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                order: 1;
+                height: 75%;
+            }
+
+            #contact-info {
+                order: 2;
+                @extend %font_robotoCondensed;
+            }
+
+            .links-wrapper {
+                order: 3;
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                @extend %font_robotoCondensed;
+        
+                .index-link {
+                    font-size: 200%;
+                    margin: 2% 5%;
+                    text-decoration: none;
+                }
+
+                .index-link:hover {
+                    background-color: lighten($color: $clr-button, $amount: 50);
+                    text-decoration: underline;
+                }
+            }
         }
     }
 
-    .links-wrapper {
-        .index-link {
-            font-size: 200%;
-            margin: 2% 5%;
-        }
-    }
 
     // .content-panel::before {
     //     @include pseudoElement;
@@ -274,7 +310,7 @@ footer {
             // border-image: inherit;
             
             h1 {
-                @include font_cabin;
+                @extend %font_cabin;
                 font-size: max(8vw, 25px);
                 text-shadow: #b38a64 0px 2px 2px;
                 color: $clr-wood-carving;                
@@ -299,7 +335,7 @@ footer {
             padding: 2% 2%;
 
             a {
-                @include font_cabin();
+                @extend %font_cabin;
                 font-size: max(2vw, 20px);
             }
 
@@ -401,21 +437,7 @@ footer {
     }
 }
 
-.links-wrapper {
-    display: flex;
-    flex-direction: column;
-    grid-row: links-start / links-end;
-    grid-column: links-start / links-end;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
-    font-size: 100%;
-    z-index: 2;
 
-    .button:hover {
-        background-color: lighten($color: $clr-button, $amount: 50);
-    }
-}
 
 .button-large {
     background-color: $clr-button;
