--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -3,7 +3,7 @@
 
 #header {
 
-    position: fixed;
+    // position: fixed;
     top: 0;
     width: 100%;
     z-index: 5;
@@ -14,7 +14,7 @@
     text-align: center;
 
     border-bottom: 2px solid red;
-    background-color: color('primary', base);
+    background-color: color('white', transparent);
     backdrop-filter: blur(2px);
     -webkit-backdrop-filter: blur(2px);
     box-shadow: 0px 4px 10px black;
