--- a/src/components/projectwrapper/projectwrapper-style.css
+++ b/src/components/projectwrapper/projectwrapper-style.css
@@ -1,4 +1,9 @@
 .col.project-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: row;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
 }
