ref: removed '-style' from some css files

--- a/src/components/Sidebar/sidebar.scss
+++ b/src/components/Sidebar/sidebar.scss
@@ -9,4 +9,5 @@ nav {
     // Width is controlled from app.scss
 
     background-color: rgba($color: $clr-primary, $alpha: 0.8);
+    border-right: 2px solid $clr-primary;
 }
