--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,5 +1,5 @@
-@import 'style/_responsive.scss';
-@import 'style/_colors.scss';
+@import '../../style/_responsive.scss';
+@import '../../style/_colors.scss';
 
 #header {
 
