--- a/src/components/projectwrapper/project/project.css
+++ b/src/components/projectwrapper/project/project.css
@@ -1,5 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=Staatliches&display=swap");
 .card {
   width: 45%;
   margin: 0% 2%;
   text-align: center;
+}
+
+.card-title {
+  font-family: "Staatliches", sans-serif;
 }
