--- a/src/components/projectwrapper/project/project.css
+++ b/src/components/projectwrapper/project/project.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Staatliches&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap");
 .card {
   width: 45%;
   margin: 0% 2%;
@@ -6,5 +7,5 @@
 }
 
 .card-title {
-  font-family: "Staatliches", sans-serif;
+  font-family: 'Staatliches', sans-serif;
 }
